Prep for phase out SVLMGMT - only need to transfer unifi

--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -123,6 +123,7 @@ apps__oauth2_proxy_azure_client_secret: ENC[AES256_GCM,data:Pam/LAaXVj7M/7Exq8Wi
 apps__oauth2_proxy_azure_email_domain: ENC[AES256_GCM,data:w06+W+if2MKQXKPjczw=,iv:Ig02A3ZHvEiYexkJ6qM5YVsqxxQix7Q210nEV6mPqQ0=,tag:1yIMhepInB3O4uXO2Ifw0w==,type:str]
 #ENC[AES256_GCM,data:BmWmOjzwnA==,iv:b8uWKyMQNrB9rffTDF0ws1pumrbEQNLoUoyCZu6JBZI=,tag:Rbtxhfsns17lA6RQDt7sBA==,type:comment]
 apps__unifi_db_password: ENC[AES256_GCM,data:/BgDY8rRlvITLK9jG0S4MlkbL7vv5PJeS840Oer3z1chW0HmEDCOJ11nFLM0KgydONP5qVBJfUlWdZxZJBln6Q==,iv:eW2Q4stryDEyngm9yVNJy3ANQD33WXtlaM0TGwsKpzw=,tag:rBjUgwRsqIF1rJ8mMCt5WA==,type:str]
+apps__unifi_db_root_password: ENC[AES256_GCM,data:LLZ3S/XBaEP4nQp3SACNgcBOCbfdJhvUVUmqkdwttCKmFRR+ybyYG1tDZcm0lNhn4C9Mw0ZON2vm7ek+jlu5aw==,iv:s0+XTgwAmXJKEAjD16whBsfswNQ1nt8moTDfeKQLrCw=,tag:YsQOTTOlWIPluXYhUqJ+Jg==,type:str]
 #ENC[AES256_GCM,data:dCK8zfcjIA==,iv:Gp0f2j/Ya2pGPAfK7DLwkAJ0aALLSr+cjYpVsTB2I8w=,tag:2H5n8SdoMSC5CxJAJx9ojQ==,type:comment]
 apps__vault_root_ca_common_name: ENC[AES256_GCM,data:k3C24zLAygfeFVOm0YY/q63L/CYRqw==,iv:d5t6koit6pXb+qjb1kGLsAHmIm4t0/yztzSzMmx2BqU=,tag:vbORmpTf6BNb2xP8zLZsLQ==,type:str]
 apps__vault_int_ca_common_name: ENC[AES256_GCM,data:XS3FSU5hHgGx0zw3LAB2uDaURAJLAce6wZvB/duO,iv:BwytPfrggJDwig+vT2ApVfKi1hZJbXIICDU5LUH4yp0=,tag:V16QaE7cJK4IXcGoscDPdg==,type:str]
@@ -164,8 +165,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-08-10T07:11:29Z"
-    mac: ENC[AES256_GCM,data:onVkbO+GB3SmFnoOnAfwpmPu0c2z/VwdmEda1bMCEkDAZUnVsJWWA7zszRkZDMJSp7kV6JfMEps4+TgkAXNWHAtGg/iu4COKS7iem3t8qp+StTFq98BcBgobHsW2rl0smQONSiHNT8e04e/esXBvWyq7BUnnd/JWKOCQ7aBVWW4=,iv:/1LU5sC2XCSTjKA67H51bKcvOtoOP5S/Du2yVnXOe24=,tag:hi2yFf8yg6d2FrM3LNXxyQ==,type:str]
+    lastmodified: "2025-09-22T21:02:14Z"
+    mac: ENC[AES256_GCM,data:Qx40OqyC3AJB6kZ6F6hwb0+pQxVUjI13eo+3t+L6DwNmpFp4JqjDaN4vbQqNiHVD0R136wBUZXyT8seeAF0fjCGX2ZpHeDUICdrfHa4O+zgh/tlaVsWoAt5BY3axcGRQ51YW6ESe6YeopfwEEDV9cVdRqUKSF8BgDBbs/RH+Zt0=,iv:AaySddNxA/JKnUsk6gHb6JruuPq1VkDqBpFEJP+BHSk=,tag:5MlH/2eSiuVmQPx5IAULnQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
