--- a/docker/ansible/inventory/group_vars/infra/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/infra/secrets.sops.yml
@@ -5,6 +5,9 @@ generic__svlnas_smb_password: ENC[AES256_GCM,data:IIZ7ytroySt4s2PomKcuXbLb7+FUEe
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:JKf+13oWZ9ELJ6kL8EJ7Da1lXKz7OPtvdenV2Vq373OZaztAAFBTEXj5ERXWF2oKWSJy9vfa+L+78bhJUlubag==,iv:biiIhk5x1/yDY5FFRTTMBXd9ChVobboUOoCPkPvPvAw=,tag:3V4Rt1Gc7tPPHUfQb1ldVQ==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
+#ENC[AES256_GCM,data:vlKPC+pV+g==,iv:OSoaHmtXAsDQHNwfirEbL/Kthtk1c/XHEXbhuRTOf8A=,tag:DyEnfBWfXvBjqIJfep2xOQ==,type:comment]
+apps__gatus_db_password: ENC[AES256_GCM,data:Xu+aHHwPPKEaXQT1w12/KNfUcI/vvGu/FLXlzqATpdVCFceDS1rbqDjbTsgko4KDaN5vrsdTgq3T87kWTInLFw==,iv:yRxOYSL8ZdrdOZTdVqCkPjQ/nYLI9TjTzwErY6mYV8Q=,tag:bg2IquGmPnxE6nxywFusmw==,type:str]
+apps__gatus_msteams_webhook_url: ENC[AES256_GCM,data:7sSN4yEeIRmo4J3Xs0BQNoYxfOXbfbnM8GW1QO1JDJNI6KO6m/ixab9GVbGrm+XeR1aJ3NC5a05uhypVwF54VJTxGUmZ/6ZdLIXOf6S+N1YDMKFSXVom+JRw5IKe50LJagJ3vRdX+zVL/CfyDFeaPtu57RLQ/YOBLYSuPVrGne9VnDmtDPWyuG/8jIiYsCdxtZk4ypdYGDV7vgiRrqrmnzarqFmBjgvSKjeZLQqUFMx/07xKaWy2/IoQAYRsxM53UPN0uuCjQnwhlQW4pXzS,iv:cJrIQBHidTar9mn0IOjB8wnyfrYQsbzdxkVUkjvTkYU=,tag:gdbabDKfuDp+B4a0fhYtDA==,type:str]
 #ENC[AES256_GCM,data:E36VcHT1DRf3boifOeYmBaMx1pDtSg==,iv:y5j+81z6V075CSJgcfxu7IVhHLRkmzFJ21U9/uoNxoA=,tag:0KjKKifNFuVGQp/QMTYW4A==,type:comment]
 apps__traefik_forward_auth_secret: ENC[AES256_GCM,data:ExcicXMehd5WgXQkOm/gLAyPZBwpiR3FZVfAWYg3DJrrUMjQBplAcoIF1ezuJepHEdAymCagPOwoabDBGQp7/A==,iv:2MY5Q0l67M1oNxTRWwb7CNRNeZSMCKK85lTsUsWEnIo=,tag:/qiE9ZArXOzPDvIK2TuT1Q==,type:str]
 #ENC[AES256_GCM,data:6SYMncMo1qoM0Q==,iv:duT8JV4AlE05wAzb4Kp28A7m1NrhliQixf9Y6BpcbKI=,tag:/Z3N+lhpeo1zaBYHqt8mtA==,type:comment]
@@ -25,8 +28,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-04T16:13:23Z"
-    mac: ENC[AES256_GCM,data:HhQIfnJkG/jF4j8PgilJb8RSeQp0btPt9XzyAGAqxqPd2WHwm8iAWSCoTbT3IZINuWFy5E1BWVBbLJwjs1uzhSsTUQ82elJ7pYyo6t5mm/bwEn8PYmgxypDZajiscrfUQGO73Kr3W8ULAD79ZkjrcRDvDcAlHxl7ahzWldkalBU=,iv:ypoIRLBRlOX9pZrKvopnegsI9rJ/jX7cn+9RH9sqVwU=,tag:qW6uGk8G8DO6fxScn9K39w==,type:str]
+    lastmodified: "2025-09-22T19:53:19Z"
+    mac: ENC[AES256_GCM,data:y/C/dPoybzGkaY0G37pSrv3gGa+/dXEs/0F2EIg9WjobXSXCScBg3fOaLvKP2pqbBgYEcetmA87lejoLlk9eTEF2oAvs4A2wPDEwbcUOqMCyVnmUOKWzSF/iDpA6tjlxEDiblloTme/gT4dE+uwKJzf9TiTuv3sBYq/SFApNwgo=,iv:7texWNEsYB7DFmC+6BwMmri48O5ngiEMJxZVKs1TAZ4=,tag:6O4gZz95M7YQklWDL88Qpg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
