Phase out old management server

--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -8,6 +8,7 @@ generic__database_backup_storage_account_path: ENC[AES256_GCM,data:X+9RSvQYb70iN
 generic__database_backup_storage_account_mode: ENC[AES256_GCM,data:AVDA8w==,iv:Ip+3pu5P8EfoScpn9gT6KRmlJRDE+wXEOTF6+PtXmPU=,tag:XshJRPZbyo9r4EnOuIeqWQ==,type:str]
 generic__ips_traefik: ENC[AES256_GCM,data:IRsIbfTS8IdwTZpfHdfk,iv:L+z1q+PHjSYr7X4t2NQOcaiS9qgaPhd8rWi19G+TVGA=,tag:ioIXRVidrKcyWKyqUtPQMA==,type:str]
 generic__ips_nas: ENC[AES256_GCM,data:amqhgdzS3I6BScaS,iv:Nbzcpl5qSSS7RRZj0GpVH0Qq9fFn8rapgRV6pUL/OYw=,tag:0jVxBLxlL2gbqs3LX1reUw==,type:str]
+generic__ips_home_default_gateway: ENC[AES256_GCM,data:pBCFvVXSs1di69Y=,iv:3sSnsZ2lF5lLnky9cuFeUshhcPL+cJwFRE1BWwFzU5o=,tag:WAHLyFKkoKKKjy6UwOx+AQ==,type:str]
 #ENC[AES256_GCM,data:Wl05KAI3PlZ4zHIjPmY1oQ==,iv:0PbWA0vuNCxhea9Kzxq8+OmIMHs2DpyD05oLLlNL8SQ=,tag:cSOAahWnkzXayGb+lUj4dA==,type:comment]
 generic__docker_traefik_htpasswd_entry: ENC[AES256_GCM,data:kxxDLUwEcXdDpPSsWA8ks3hzOZ2Lg/RGxE4a9nsq9eJjqWvYJD+UBOt0R2I=,iv:QHuxMr/sbp9HDrZb7umV31vQRgLfkqp7upmaP6S3rE8=,tag:SKeO9ZpuRtEXSjwXWOIsBQ==,type:str]
 #ENC[AES256_GCM,data:JmeIn4VJQS9Sf3ZJwflz5ngAQpEjoXSlK8T8KeTFKb5SHUjLl6qLP/dotyA7GydqxGVo1KebJuNuWZkjYS6Rgt6HxsqNcu+30xfO+USsZcYjDLt7r2K43bT/SjFbA1ti9TTl+eWwSSlURk0UOfTI01/DFO50/xPYk6s+61X54rFKhE0EVr4Hj3dTuffJFr8yPnKCCzDElG1yZfGAQYhxZoc=,iv:22orSRrcjHrerwyf+DWJEZlZSQvDydn8pevLMqo67Ao=,tag:6425ES4BH2rQS+dmeRNbuQ==,type:comment]
@@ -165,8 +166,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-09-22T21:02:14Z"
-    mac: ENC[AES256_GCM,data:Qx40OqyC3AJB6kZ6F6hwb0+pQxVUjI13eo+3t+L6DwNmpFp4JqjDaN4vbQqNiHVD0R136wBUZXyT8seeAF0fjCGX2ZpHeDUICdrfHa4O+zgh/tlaVsWoAt5BY3axcGRQ51YW6ESe6YeopfwEEDV9cVdRqUKSF8BgDBbs/RH+Zt0=,iv:AaySddNxA/JKnUsk6gHb6JruuPq1VkDqBpFEJP+BHSk=,tag:5MlH/2eSiuVmQPx5IAULnQ==,type:str]
+    lastmodified: "2025-09-23T13:37:45Z"
+    mac: ENC[AES256_GCM,data:LkWzf8GXqHGZuvRqvPBKLfrLpdWQd3Tmdi+eaqeygvWiUmUcNVsfjyH1m7tASlvCAkYZf5sn+u4hlEgy5MytSKOP02SIe4lxS8miBjek/RcEfN8m737WyZCX7UAHBupxfyt+RwCqSdmxRvFCqOMV3A0R75zWid+xD6ah5Uw1sqc=,iv:brDZfCHQQcAhx2ArITD10YTKzF7KoUSWjapFplxzihI=,tag:7jtk2u6+ZrXlx0IpeKgvRA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
