--- a/docker/ansible/tasks/load-credentials.yaml
+++ b/docker/ansible/tasks/load-credentials.yaml
@@ -26,14 +26,14 @@
                           # on load (this is the default)
   when: inventory_hostname in groups['apps']
 
-- name: Load encrypted Management credentials
+- name: Load encrypted Infra credentials
   community.sops.load_vars:
-    file: ../inventory/group_vars/management/secrets.sops.yml
+    file: ../inventory/group_vars/infra/secrets.sops.yml
     age_keyfile: $HOME/git/home/age.key
     config_path: $HOME/git/home/.sops.yaml
     expressions: ignore  # explicitly do not evaluate expressions
                           # on load (this is the default)
-  when: inventory_hostname in groups['management']
+  when: inventory_hostname in groups['infra']
 
 - name: Load encrypted Media credentials
   community.sops.load_vars:
