--- a/docker/ansible/tasks/configure-dns-server.yaml
+++ b/docker/ansible/tasks/configure-dns-server.yaml
@@ -14,21 +14,32 @@
         state: present
         backup: yes
 
-    - name: Set DNS Server
+    - name: Set DNS Server - Internal
+      ini_file:
+        path: /etc/systemd/resolved.conf
+        section: Resolve
+        option: DNS
+        value: "{{ generic__ips_home_default_gateway }}"
+        no_extra_spaces: yes
+      when: inventory_hostname in groups['internal']
+
+    - name: Set DNS Server - External
       ini_file:
         path: /etc/systemd/resolved.conf
         section: Resolve
         option: DNS
         value: 9.9.9.9
         no_extra_spaces: yes
+      when: inventory_hostname in groups['external']
 
-    - name: Set DNS Fallback Server
+    - name: Set DNS Fallback Server - External
       ini_file:
         path: /etc/systemd/resolved.conf
         section: Resolve
         option: FallbackDNS
         value: 149.112.112.112
         no_extra_spaces: yes
+      when: inventory_hostname in groups['external']
 
     - name: Disable systemd-resolved stub listener
       ini_file:
