Fix backup path

--- a/docker/ansible/templates/compose-modules/hoppscotch.yml
+++ b/docker/ansible/templates/compose-modules/hoppscotch.yml
@@ -128,7 +128,7 @@ services:
       - DEFAULT_BACKUP_LOCATION=blobxfer
       - DEFAULT_BLOBXFER_STORAGE_ACCOUNT=${DB_BACKUP_SA_NAME}
       - DEFAULT_BLOBXFER_STORAGE_ACCOUNT_KEY=${DB_BACKUP_SA_KEY}
-      - DEFAULT_BLOBXFER_REMOTE_PATH=${DB_BACKUP_SA_PATH}
+      - DEFAULT_BLOBXFER_REMOTE_PATH=${DB_BACKUP_SA_PATH}/hoppscotch
       - DEFAULT_BLOBXFER_MODE=${DB_BACKUP_SA_MODE}
 
       - DB01_TYPE=pgsql
