--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -7,6 +7,7 @@ vars:
   TALHELPER_CONFIG_FILE: '{{.KUBERNETES_DIR}}/bootstrap/talos/talconfig.yaml'
   TALHELPER_SECRET_FILE: '{{.KUBERNETES_DIR}}/bootstrap/talos/talsecret.sops.yaml'
   TALOSCONFIG: '{{.TALHELPER_CLUSTER_DIR}}/talosconfig'
+  CREATE_AZ_VM_SCRIPT: "{{.SCRIPTS_DIR}}/create-az-vm.sh"
 
 env:
   TALOSCONFIG: '{{.TALOSCONFIG}}'
@@ -97,3 +98,11 @@ tasks:
     cmd: flux --namespace flux-system resume kustomization --all
     preconditions:
       - which flux
+
+  # Added by DevSecNinja
+  create-az-vm:
+    desc: Creates the Azure VM
+    cmd: sops exec-env {{.SCRIPTS_DIR}}/secrets.sops.yml "bash {{.CREATE_AZ_VM_SCRIPT}}"
+    preconditions:
+      - test -f {{.CREATE_AZ_VM_SCRIPT}}
+      - test -f {{.SCRIPTS_DIR}}/secrets.sops.yml
