--- a/docker/ansible/templates/compose-modules/n8n.yml
+++ b/docker/ansible/templates/compose-modules/n8n.yml
@@ -50,6 +50,7 @@ services:
     security_opt:
       - no-new-privileges=true
     mem_limit: 1024m
+    shm_size: 128mb
     volumes:
       - n8n_db_data:/var/lib/postgresql/data
       - $DOCKERDIR/data/n8n/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
