--- a/docker/ansible/templates/compose-modules/n8n.yml
+++ b/docker/ansible/templates/compose-modules/n8n.yml
@@ -51,6 +51,9 @@ services:
       - no-new-privileges=true
     mem_limit: 1024m
     shm_size: 128mb
+    depends_on:
+      n8n-db-upgrade:
+        condition: service_completed_successfully
     volumes:
       - n8n_db_data:/var/lib/postgresql/data
       - $DOCKERDIR/data/n8n/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
@@ -128,8 +131,7 @@ services:
       - POSTGRES_PASSWORD=${N8N_DB_PASSWORD}
       - PGDATA=/var/lib/postgresql/data
       - PGAUTO_ONESHOT=yes
-    networks:
-      - n8n-backend
+    network_mode: none
 
 volumes:
   n8n_db_data:
