--- a/docker/ansible/templates/compose-modules/n8n.yml
+++ b/docker/ansible/templates/compose-modules/n8n.yml
@@ -65,7 +65,7 @@ services:
       - POSTGRES_USER=n8n
       - POSTGRES_PASSWORD=${N8N_DB_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
