Enable backup notifications

--- a/docker/ansible/templates/compose-modules/gatus.yml
+++ b/docker/ansible/templates/compose-modules/gatus.yml
@@ -22,7 +22,12 @@ services:
       - DB_HOST=gatus-db
       - DB_PORT=5432
       # Webhooks
-      - GATUS_MSTEAMS_WEBHOOK_URL=${GATUS_MSTEAMS_WEBHOOK_URL}
+      - NOTIFICATIONS_EMAIL_FROM=${NOTIFICATIONS_EMAIL_FROM}
+      - NOTIFICATIONS_EMAIL_TO=${NOTIFICATIONS_EMAIL_TO}
+      - NOTIFICATIONS_EMAIL_HOST=${NOTIFICATIONS_EMAIL_HOST}
+      - NOTIFICATIONS_EMAIL_USERNAME=${NOTIFICATIONS_EMAIL_USERNAME}
+      - NOTIFICATIONS_EMAIL_PASSWORD=${NOTIFICATIONS_EMAIL_PASSWORD}
+      - NOTIFICATIONS_EMAIL_PORT=${NOTIFICATIONS_EMAIL_PORT}
       # Other
       - DOMAINNAME=${DOMAINNAME}
       - IP_SVLEXT=${GENERIC_IPS_SVLEXT}
@@ -98,10 +103,17 @@ services:
 
       - ENABLE_NOTIFICATIONS=TRUE
       - NOTIFICATION_TYPE=EMAIL
-      - SMTP_HOST=mailrise
-      - SMTP_PORT=${NOTIFICATIONS_MAILRISE_SMTP_PORT}
-      - MAIL_TO=msteams@mailrise.xyz
-      - MAIL_FROM=gatus-db-backup
+      - SMTP_HOST=${NOTIFICATIONS_EMAIL_HOST}
+      - SMTP_DOMAIN=${NOTIFICATIONS_EMAIL_DOMAIN}
+      - SMTP_PORT=${NOTIFICATIONS_EMAIL_PORT}
+      - SMTP_USER=${NOTIFICATIONS_EMAIL_USERNAME}
+      - SMTP_PASS=${NOTIFICATIONS_EMAIL_PASSWORD}
+      - MAIL_TO=${NOTIFICATIONS_EMAIL_TO}
+      - MAIL_FROM=${NOTIFICATIONS_EMAIL_FROM}
+      - SMTP_AUTHENTICATION="on"
+      - SMTP_TLSCERTCHECK=TRUE
+      - SMTP_STARTTLS=on
+      - SMTP_TLS=on
 
       - DEFAULT_CHECKSUM=SHA1        # Set standard checksum to SHA1
       - DEFAULT_COMPRESSION=ZSTD     # Compress all with ZSTD
