--- a/docker/ansible/templates/compose-modules/gatus.yml
+++ b/docker/ansible/templates/compose-modules/gatus.yml
@@ -42,7 +42,7 @@ services:
       - homepage.description=Uptime Monitoring
       ## Widget
       - homepage.widget.type=gatus
-      - homepage.widget.url=http://gatus:8080
+      - homepage.widget.url=https://status-docker.$DOMAINNAME
       # Group
       - org.label-schema.group=productivity
       # Traefik
