Introduce a secret for monitoring to bypass auth

--- a/docker/ansible/inventory/group_vars/all/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/all/secrets.sops.yml
@@ -22,6 +22,7 @@ notifications__mailrise_smtp_username: ENC[AES256_GCM,data:byZXxGsnQqT5,iv:xEX2i
 notifications__mailrise_smtp_port: ENC[AES256_GCM,data:ejt3vQ==,iv:B9GNSQ56NVfYvRhMTIM1m2JLBmN15O3BfqPbP/FD4AU=,tag:lTivvxDnyN0hYvvkVzlDpQ==,type:int]
 notifications__teams_webhook: ENC[AES256_GCM,data:8mTwKTasCpg6dVNg6i5I+rTNQREZpxqw1K0V4hL2vgL1iMUNsoStv+MD5N6TMHsoXG3tpcBlG3tejofGl/wKG/fAB6PjzQokMSm6/br1OdPwJ+J/l9T0N9eyOInwsh8Y4VRQHj1PBbR/vhWwZmR8MuL67I6kOEypk+5Hovbx7Xr+qqDf7Ju6V4X38ZpLQNerPREwSkSIxmnM3vVqYmEX1mvZ5Qq4ZkmEwxzsFL6UodVKocg+OQ8elsnD8XEaVH3ivhDNP17p/pw2jdZFk1Fe,iv:hIbx6pibCP7IEwr2xKZnzUdxGBejVIpCJdBZUAMkaF8=,tag:NTcNW5MsV3BTb/vKwejk4A==,type:str]
 notifications__teams_webhook_containrrr: ENC[AES256_GCM,data:Mtgriey6X9tDCMqdW2qD8aHTIN1m3rOdG2QAmnbeQsvlBd6o4nedWsBPCR+QekJfwQ7ZucPNEoG3pJSZoYNVfVGvYqDo89n1fleFgmOU083LEEIblXxCWyn9R5hc9K741Pq15q3m3X2FQHBTUw8RPNDBX7m/VTiPx56xd0+n0qU0P6yPwbaCWJoMvytkiuMqwTaLztcLXs5CaAa5sf0YRE8vKjtxILs9QMAHcmB/AjPlB8bLLsaNCKal,iv:6F71XdIH/GX29ugLowAofuvdDaa9urbyFSVQgmopobc=,tag:NpUlxO5qvOgAsvOS7pfVNw==,type:str]
+notifications__email_shoutrrr_url: ENC[AES256_GCM,data:nQYuWPDHO+zXRX93GqIU1XmIltUpROeZWdSs3aLh13izo4NY2gwWS2qTaActEY4wX0GXjeiLYjTBKp2A3SS33Tv03yN5GQMJ7WZeL2efYa3F6vA9pzu43c0H03Gsjz9CyYq4sf8nB++y3N5fOpKbBr6JjwN+re1IQVY3LeJaIVyvqexIzhsj6obz8VNUQXPzhWzM8QmU6e5TCw0IGo77w1xGzjeu/iM/ND6cNDTDay3L4AuRLKbdJ1OBIAZNPpxWxLgyDkFScVwyQA==,iv:RiAQbm1g8N8scAT2RN4azUOl0ur9zKX8ZfLzjKEGZa4=,tag:8P05oKdfrADQTyA20fBWwQ==,type:str]
 notifications__email_domain: ENC[AES256_GCM,data:vDlMmLYJqMfa7lxSjEOJtb+OODXO,iv:wVFACxJIfV6f0mVb6IsTM5uTdLeTpv1/gVPcfU89244=,tag:2OWRLy2Ued4a0DSSApfReQ==,type:str]
 notifications__email_from: ENC[AES256_GCM,data:vZ8yxzUEtQ0PcoY8tSFkN3utSAUsL59X+nZA3O3q1ec=,iv:eEjquSpdpXfj/g1rNeU30qeHzwhcQcw88CgJT+Wwyhc=,tag:rELcq2VgOjTLjQ7Sy82T/w==,type:str]
 notifications__email_to: ENC[AES256_GCM,data:RmluFQ9RIsZRRe8w89ek6ce9zU4AYpOc,iv:RQv223IbHl0pzvFF4deymwQ4+7XB4NWCsuvSd3SzGOw=,tag:ashwGPu+79ys4qpmH00UCA==,type:str]
@@ -52,8 +53,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-10T22:10:11Z"
-    mac: ENC[AES256_GCM,data:8ZnlnJgGZgqgkNcKVuXWWnLUoVVY4ItflSxdanxaHXhmw8ZO6MoyLH45SUp5GUJLPOvn9I1I02rJOujCcepc5uhSFcM+FovfSMsm2TwtFkBiN3mvl8vMTSQHC5+rdGSAXbS656kRLMJd6LQb0To54451RJ3dtKFQ3ooiXppkOA4=,iv:v3NMCS2J2Wm3Kmy63QZi6YSIBT17v6bWEt37ReAZwNY=,tag:t2XRRwN9eNe0ioCF3joLgw==,type:str]
+    lastmodified: "2025-11-11T08:45:38Z"
+    mac: ENC[AES256_GCM,data:nLr848QDPxt77AI2ifAqYFCxJr2W9HAIAt+WVp25lWql93qzq7Jv9yMPEV67PmhOCbRJLys8STBSAhluqnE40NX6i87GeRDhmIkMDXIpZokLbg/TA5heDHrUDia5/1BNENJNQ/ycxJo3ylRHXth0t7IrrQviumyjeZQbtVK/ohg=,iv:COlhDqyAMF/l9u132mk0E2Fcob1VAPx7AmLb/CXL09Q=,tag:ClGRyHq0944xEf+U7FafsA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
