--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -6,6 +6,7 @@ generic__database_backup_storage_account_name: null
 generic__database_backup_storage_account_key: null
 generic__database_backup_storage_account_path: ENC[AES256_GCM,data:X+9RSvQYb70iNQZ++qwujtA=,iv:fOgASRH7082DDnsX8pIVarhN/JT2dtteWnawFlM0edw=,tag:hOiO/2fiaZ93tCb8fEHYBw==,type:str]
 generic__database_backup_storage_account_mode: ENC[AES256_GCM,data:AVDA8w==,iv:Ip+3pu5P8EfoScpn9gT6KRmlJRDE+wXEOTF6+PtXmPU=,tag:XshJRPZbyo9r4EnOuIeqWQ==,type:str]
+generic__monitoring_header_secret: ENC[AES256_GCM,data:udPCBSayvt6dp+fE33ooehfe4JSQqwW/ROcIE5aiRx84FLvyTrr6/jb5SKKcIEGhCdQGycpLBY9yGHBsaN5R7Q==,iv:oyd1/yFDxzsWHJD/tBjG9BRdTALN37FlDyf51KRcd+U=,tag:KmWe+zWI+UFe6kDGiZzmFw==,type:str]
 generic__ips_traefik: ENC[AES256_GCM,data:IRsIbfTS8IdwTZpfHdfk,iv:L+z1q+PHjSYr7X4t2NQOcaiS9qgaPhd8rWi19G+TVGA=,tag:ioIXRVidrKcyWKyqUtPQMA==,type:str]
 generic__ips_nas: ENC[AES256_GCM,data:amqhgdzS3I6BScaS,iv:Nbzcpl5qSSS7RRZj0GpVH0Qq9fFn8rapgRV6pUL/OYw=,tag:0jVxBLxlL2gbqs3LX1reUw==,type:str]
 generic__ips_home_default_gateway: ENC[AES256_GCM,data:pBCFvVXSs1di69Y=,iv:3sSnsZ2lF5lLnky9cuFeUshhcPL+cJwFRE1BWwFzU5o=,tag:WAHLyFKkoKKKjy6UwOx+AQ==,type:str]
@@ -161,8 +162,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T07:26:45Z"
-    mac: ENC[AES256_GCM,data:4BVVAGozxdWOMWICTjDkeNght/d9JhXjKF4b7Zua+UFce03YKhkh89X4fZ/J/4p6vxGB55x7BdlXWDPecXXIEgvxnewsQ5iXm3wg+m3dF2zfTGPAdcuMQXoTeLvmXG6z22sz5rUKvUHmPRNXbD1K21fk+6zGA5l0BpbanQuNgZo=,iv:0qTfmJyMVYGVP0g8eBta+VY/WTPlXufc61/bApP+D7c=,tag:1Up+ynErVA2Jv0i+xIxGIQ==,type:str]
+    lastmodified: "2025-11-11T11:45:52Z"
+    mac: ENC[AES256_GCM,data:JTONS1IAfKmlV7wbSsEpZmo0UJMUhSuUYkwHMg4/iNaoegtFgNopMUoKjzAfdOxfakfAErrosQUI5ABDTNoSv8YboVTijShlgLGX0pssrfjUGM1dnNXWfIPWoCXFXuQexmr+e1NSusGB7+lPeaTXANf1f6PTrCMrerkCXa4m86E=,iv:CAVtfOV9Sb42OkwwgrJKJbg9+4pAgzkBEjU4PLQF/TM=,tag:iYoVn+muuTMiT7LXF/s7Qg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
