--- a/docker/ansible/inventory/group_vars/all/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/all/secrets.sops.yml
@@ -22,6 +22,8 @@ notifications__mailrise_smtp_username: ENC[AES256_GCM,data:byZXxGsnQqT5,iv:xEX2i
 notifications__mailrise_smtp_port: ENC[AES256_GCM,data:ejt3vQ==,iv:B9GNSQ56NVfYvRhMTIM1m2JLBmN15O3BfqPbP/FD4AU=,tag:lTivvxDnyN0hYvvkVzlDpQ==,type:int]
 notifications__teams_webhook: ENC[AES256_GCM,data:8mTwKTasCpg6dVNg6i5I+rTNQREZpxqw1K0V4hL2vgL1iMUNsoStv+MD5N6TMHsoXG3tpcBlG3tejofGl/wKG/fAB6PjzQokMSm6/br1OdPwJ+J/l9T0N9eyOInwsh8Y4VRQHj1PBbR/vhWwZmR8MuL67I6kOEypk+5Hovbx7Xr+qqDf7Ju6V4X38ZpLQNerPREwSkSIxmnM3vVqYmEX1mvZ5Qq4ZkmEwxzsFL6UodVKocg+OQ8elsnD8XEaVH3ivhDNP17p/pw2jdZFk1Fe,iv:hIbx6pibCP7IEwr2xKZnzUdxGBejVIpCJdBZUAMkaF8=,tag:NTcNW5MsV3BTb/vKwejk4A==,type:str]
 notifications__teams_webhook_containrrr: ENC[AES256_GCM,data:Mtgriey6X9tDCMqdW2qD8aHTIN1m3rOdG2QAmnbeQsvlBd6o4nedWsBPCR+QekJfwQ7ZucPNEoG3pJSZoYNVfVGvYqDo89n1fleFgmOU083LEEIblXxCWyn9R5hc9K741Pq15q3m3X2FQHBTUw8RPNDBX7m/VTiPx56xd0+n0qU0P6yPwbaCWJoMvytkiuMqwTaLztcLXs5CaAa5sf0YRE8vKjtxILs9QMAHcmB/AjPlB8bLLsaNCKal,iv:6F71XdIH/GX29ugLowAofuvdDaa9urbyFSVQgmopobc=,tag:NpUlxO5qvOgAsvOS7pfVNw==,type:str]
+#ENC[AES256_GCM,data:l4rSSo7aVqFp8Xr5xBCs3fO+TiRPAMJp+5DyH/7QWLd3rVnyVT1RBftzSYrxuoCtymgmWeyP9T/m8eL2pHcmDTSoof3JKaWwh9t+qIAmabJu7DIEQWUJy/jTNsSf,iv:E0iyMFxDcugBoYL+Xe76P9pYl/nGUY2MRe2S17pTipk=,tag:YUhKB0YQpj8273yOPgYC9g==,type:comment]
+#ENC[AES256_GCM,data:G1HWXzcLCTBRVQmaJD7Iy6d0+9siJ+7agS6wFk9cLLtkhgddcjjZt+Euzf02adgwGog=,iv:2aK7QLXDdWacWglg6/Ufztjq/2Yqk/LaLsSSzBCOVq8=,tag:skaNnMCUYcrVnyAHfdRdfQ==,type:comment]
 notifications__email_shoutrrr_url: ENC[AES256_GCM,data:nQYuWPDHO+zXRX93GqIU1XmIltUpROeZWdSs3aLh13izo4NY2gwWS2qTaActEY4wX0GXjeiLYjTBKp2A3SS33Tv03yN5GQMJ7WZeL2efYa3F6vA9pzu43c0H03Gsjz9CyYq4sf8nB++y3N5fOpKbBr6JjwN+re1IQVY3LeJaIVyvqexIzhsj6obz8VNUQXPzhWzM8QmU6e5TCw0IGo77w1xGzjeu/iM/ND6cNDTDay3L4AuRLKbdJ1OBIAZNPpxWxLgyDkFScVwyQA==,iv:RiAQbm1g8N8scAT2RN4azUOl0ur9zKX8ZfLzjKEGZa4=,tag:8P05oKdfrADQTyA20fBWwQ==,type:str]
 notifications__email_domain: ENC[AES256_GCM,data:vDlMmLYJqMfa7lxSjEOJtb+OODXO,iv:wVFACxJIfV6f0mVb6IsTM5uTdLeTpv1/gVPcfU89244=,tag:2OWRLy2Ued4a0DSSApfReQ==,type:str]
 notifications__email_from: ENC[AES256_GCM,data:vZ8yxzUEtQ0PcoY8tSFkN3utSAUsL59X+nZA3O3q1ec=,iv:eEjquSpdpXfj/g1rNeU30qeHzwhcQcw88CgJT+Wwyhc=,tag:rELcq2VgOjTLjQ7Sy82T/w==,type:str]
@@ -53,8 +55,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T08:45:38Z"
-    mac: ENC[AES256_GCM,data:nLr848QDPxt77AI2ifAqYFCxJr2W9HAIAt+WVp25lWql93qzq7Jv9yMPEV67PmhOCbRJLys8STBSAhluqnE40NX6i87GeRDhmIkMDXIpZokLbg/TA5heDHrUDia5/1BNENJNQ/ycxJo3ylRHXth0t7IrrQviumyjeZQbtVK/ohg=,iv:COlhDqyAMF/l9u132mk0E2Fcob1VAPx7AmLb/CXL09Q=,tag:ClGRyHq0944xEf+U7FafsA==,type:str]
+    lastmodified: "2025-11-11T12:24:32Z"
+    mac: ENC[AES256_GCM,data:NEkE++1FS+3zWgNmMKj+gJ8udlotZIKS4OhisJIDh7ecgwm/SINWpfhC51qQzrONa2ZFXHyP/FhNaI7qUEvhYpG58ZANTLUGM6IpkNho4SeI0w+lqb8P9JVEfDph434f3useoEEKlmwZw3TLPkhB+jvi3/EnKX5WvDg4swVEbPg=,iv:DYOLgJezbSPNFm7oQjXL+mz98PJP54oxDy1bVtdLPOg=,tag:ELI/8nafUPD99EbErPv+IQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
